[gd_scene load_steps=17 format=3 uid="uid://bjareuucr2dde"]

[ext_resource type="TileSet" uid="uid://cbk53vrbv3ux8" path="res://resources/tiles.tres" id="1_7dtdg"]
[ext_resource type="Script" uid="uid://c6bmvo4alo1gm" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Script" uid="uid://3u57e0eetre5" path="res://scripts/level.gd" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://bwki2yqmgeo7m" path="res://assets/player.png" id="2_mpl2h"]
[ext_resource type="Script" uid="uid://eonrn50w2cvx" path="res://scripts/player.gd" id="3_qvlc4"]
[ext_resource type="AudioStream" uid="uid://ydc0ypl47ltf" path="res://assets/move.wav" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://b30aqubhejrsk" path="res://assets/buttons.png" id="6_tefeu"]
[ext_resource type="AudioStream" uid="uid://c5bl80sbk7n8k" path="res://assets/undo.wav" id="7_tipki"]
[ext_resource type="AudioStream" uid="uid://b5oehykkdmtje" path="res://assets/winsquare.mp3" id="8_85g3d"]
[ext_resource type="AudioStream" uid="uid://decepo1b5lkob" path="res://assets/8 Bit Menu.mp3" id="9_choun"]

[sub_resource type="InputEventAction" id="InputEventAction_tefeu"]
action = &"exit"

[sub_resource type="Shortcut" id="Shortcut_o6xl0"]
events = [SubResource("InputEventAction_tefeu")]

[sub_resource type="AtlasTexture" id="AtlasTexture_tefeu"]
atlas = ExtResource("6_tefeu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="InputEventAction" id="InputEventAction_o6xl0"]
action = &"undo"

[sub_resource type="Shortcut" id="Shortcut_tipki"]
events = [SubResource("InputEventAction_o6xl0")]

[sub_resource type="AtlasTexture" id="AtlasTexture_o6xl0"]
atlas = ExtResource("6_tefeu")
region = Rect2(0, 0, 16, 16)

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="Level" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_7dtdg")
script = ExtResource("2_jyhfs")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("2_mpl2h")
script = ExtResource("3_qvlc4")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="MoveSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("6_o6xl0")

[node name="UndoSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("7_tipki")

[node name="WinSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("8_85g3d")

[node name="Music" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("9_choun")
autoplay = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ExitButton" type="TextureButton" parent="GUI"]
offset_left = 3.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 19.0
tooltip_text = "Exit"
shortcut = SubResource("Shortcut_o6xl0")
texture_normal = SubResource("AtlasTexture_tefeu")

[node name="UndoButton" type="TextureButton" parent="GUI"]
offset_left = 22.0
offset_top = 3.0
offset_right = 38.0
offset_bottom = 19.0
tooltip_text = "Undo"
shortcut = SubResource("Shortcut_tipki")
texture_normal = SubResource("AtlasTexture_o6xl0")

[connection signal="pressed" from="GUI/ExitButton" to="Player" method="exit"]
[connection signal="pressed" from="GUI/UndoButton" to="Player" method="undo"]
